docs/src/articles/kubernetes/5.monitor/resources/kube.prometheus.stack/prometheus.for.test.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-prometheus
  labels:
    app: test-prometheus
    release: test-prometheus
    app.kubernetes.io/name: prometheus-ingress
    app.kubernetes.io/instance: test-prometheus-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: test-prometheus.local
    http:
      paths:
      - path: /?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: prometheus-operated
            port:
              number: 9090
